plugins {
    id 'java'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.forkOptions.jvmArgs.addAll(['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'])
}

group = 'org.github.playerautoteleport'
version = '1.0.0'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    maven {
        url 'https://papermc.io/repo/repository/maven-public/'
    }

    maven {
        url 'https://libraries.minecraft.net/'
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.18-R0.1-SNAPSHOT'
    compileOnly 'com.mojang:authlib:1.5.25'
}
